# dyno

./: .gitignore  CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  main.c  main.cpp  nubaja_ad7998.c  nubaja_ad7998.h  nubaja_as1115.cpp  nubaja_as1115.h  nubaja_fault.cpp  nubaja_fault.h  nubaja_gpio.c  nubaja_gpio.cpp  nubaja_gpio.h  nubaja_i2c.cpp  nubaja_i2c.h  nubaja_lsm6dsm.cpp  nubaja_lsm6dsm.h  nubaja_pid.cpp  nubaja_pid.h  nubaja_proj_vars.cpp  nubaja_proj_vars.h  nubaja_pwm.c  nubaja_pwm.h  nubaja_sd.c  nubaja_sd.cpp  nubaja_sd.h
matlab/: counts_to_volts.m  dyno_data_treatment.m
