idf_component_register(SRCS 
                       "nubaja_lsm6dsm.c"
                       "nubaja_ad7998.c"
                       "nubaja_as1115.c" 
                       "nubaja_sd.c" 
                       "nubaja_i2c.c" 
                       "main.c"
                       INCLUDE_DIRS "")
