idf_component_register(SRCS 
                       "main.c"
                       "nubaja_lsm6dsm.c"
                       "nubaja_ad7998.c"
                       "nubaja_as1115.c" 
                       "nubaja_sd.c" 
                       "nubaja_i2c.c" 
                       "nubaja_pid.c"
                       "nubaja_pwm.c"
                       INCLUDE_DIRS "")
