idf_component_register(SRCS 
                       "main.cpp"
                       "nubaja_lsm6dsm.cpp"
                       "nubaja_ad7998.cpp"
                       "nubaja_as1115.cpp" 
                       "nubaja_sd.cpp" 
                       "nubaja_i2c.cpp" 
                       "nubaja_pid.cpp"
                       "nubaja_pwm.cpp"
                       "nubaja_fault.cpp"
                       "nubaja_proj_vars.cpp"
                       "nubaja_gpio.cpp"
                       INCLUDE_DIRS "")
